--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -144,6 +144,7 @@ figure {
 }
 .error-section {
   display: block;
+  margin-bottom: 20px;
 }
 .error-text {
   color: #e43b3b;
@@ -477,7 +478,6 @@ figure {
 .about-image {
   overflow: hidden;
   position: relative;
-  height: 400px;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -487,15 +487,23 @@ figure {
   transition: all 0.25s ease-in-out;
 }
 
+.about-content {
+  display: block;
+  margin-top: 1rem;
+}
+.about-content h3 {
+  font-size: 1.5rem;
+}
+
 .work-entry {
   width: 100%;
   display: block;
-  margin-top: 6rem;
+  padding-top: 4rem;
 }
 .work-entry h2 {
   font-size: 40px;
   font-weight: 700;
-  margin-bottom: 30px;
+  margin: 30px 0;
   font-family: cursive;
   position: relative;
   text-transform: uppercase;
@@ -637,9 +645,16 @@ figure {
   padding: 8px 20px;
   outline: none;
 }
+.row .spacer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 15px;
+}
 .form-section {
   position: relative;
   display: block;
+  width: 100%;
   box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.5);
   background: #fff;
   padding: 4.25rem 1.25rem;
@@ -719,6 +734,17 @@ figure {
   margin: 0 !important;
   padding: 0 !important;
 }
+.not-found {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 3rem 0;
+}
+.not-found h1 {
+  font-size: 5rem;
+}
 
 .col {
   position: relative;
@@ -737,10 +763,9 @@ figure {
   visibility: hidden;
 }
 @media screen and (min-width: 768px) {
-  /* .col {
-    padding-left: 15px;
-    padding-right: 15px;
-  } */
+  .col {
+    padding: 0 1rem;
+  }
   .col.two {
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
